@@ -21,6 +21,8 @@ New Features
 Bug Fixes
 
 - Fixed issue with conditional default subscreen URL caching
+- Internal login from login/api key and async/scheduled services now checks
+  for disabled accounts, expired passwords, etc just like normal login
 
 
 ===========================================================================
